# advent-of-code-2020

./: .gitignore  Cargo.toml  README.md  attempted_fold
inputs/: 16bsmallcolumnreorder.txt
src/: main.rs
src/aoc/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
tests/: aoc_test.rs
