[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Chris Sinjakli <chris@sinjakli.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libaoc"

[dependencies]
anyhow = "1.0"
clap = "~2.33.3"
num = "~0.3.1"
regex = "~1.4.2"
